# Composer

./: .env  .gitignore  LICENSE  README.md  compose.yaml  justfile  pyproject.toml
composer/: data_utils.py  entrypoint.py  global_state.py  logger.py  networks.py  protocols.py  trainer.py  utils.py  vector_store.py
composer/ai/: tools.py
composer/configs/: core.yaml
composer/configs/_internal/ai/: common.yaml
composer/configs/_internal/grantgist/: common-config.yaml
composer/configs/ai/: azure-openai.yaml  ollama.yaml  openai.yaml
composer/configs/ai/embeddings/: azure-openai.yaml  ollama.yaml  openai.yaml
composer/configs/ai/llm/: azure-openai-o1.yaml  openai.yaml
composer/configs/ai/vectorstore/: chroma.yaml
composer/configs/common_ai/embeddings/: azure-openai.yaml  openai.yaml
composer/configs/common_ai/llm/: azure-openai-o1.yaml  azure-openai-o3-mini.yaml  azure-openai.yaml  ollama.yaml  openai.yaml
composer/configs/common_ai/textsplitter/: standard.yaml
composer/configs/config/: default.yaml
composer/configs/grantgist/: core.yaml
composer/configs/grantgist/ai/: azure-o1.yaml  azure-o3-mini.yaml  azure.yaml  ollama.yaml  openai.yaml
composer/configs/grantgist/hydra/: default.yaml
composer/configs/grantgist/protocol/: default.yaml
composer/configs/hydra/: default.yaml
composer/configs/paths/: default.yaml
composer/configs/protocol/: grantgist-core.yaml  grantgist-index.yaml  grantgist-summarize.yaml  grantgist-sync.yaml  grantgist.yaml
composer/graphs/: datasets.py  networks.py  processing.py
composer/graphs/data_readers/: qm9.py
composer/protocol/: basic_markdown.css  grantgist.py  grantgist0.py
composer/tivae/: networks.py
composer/utils/: metadata.py
docs/: docker-compose.md  environment_variables.md
docs/examples/: grants-gov.md
graphs/: featurizers.py
